--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -6,12 +6,13 @@
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
     <%= config.author || config.title %>
   </div>
+  <div class="footer-center">
+    This is not investment, financial, or legal advice.
+  </div>
   <div class="footer-right">
     <nav>
       <ul>
-        <% for (var i in theme.nav) { %><!--
-       --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
-     --><% } %>
+     <li><a href="https://lfgberg.org">Blog</a></li>
       </ul>
     </nav>
   </div>
