--- a/themes/cactus/source/css/_partial/index.styl
+++ b/themes/cactus/source/css/_partial/index.styl
@@ -30,3 +30,13 @@
     margin-bottom: 5px
     p
       display: inline
+
+.alert
+  padding: 15px 20px
+  margin: 1rem 0
+  border-radius: 5px
+  border: 5px solid red
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1)
+  background-color: #c25353
+  border-color: red
+  color: $color-text
