--- a/themes/cactus/source/css/_partial/index.styl
+++ b/themes/cactus/source/css/_partial/index.styl
@@ -36,6 +36,6 @@
   margin: 1rem 0
   border-radius: 5px
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1)
-  background-color: #c25353
+  background-color: #c2535366
   border-color: red
   color: $color-text
