--- a/themes/cactus/layout/index.ejs
+++ b/themes/cactus/layout/index.ejs
@@ -117,10 +117,10 @@
     <div class="checklist-section">
       <h3>Technical Details</h3>
       <label>
-        <input type="checkbox" name="guarenteed-returns" />
+        <input type="checkbox" name="guaranteed-returns" />
         <span class="custom-checkbox"></span>
-        Guarentees Returns
-        <span class="tooltip">Guarentees a return on investments.</span>
+        Guarantees Returns
+        <span class="tooltip">Guarantees a return on investments.</span>
       </label>
       <label>
         <input type="checkbox" name="big-promises" />
